# django-model-deepcopy

./: .env  .gitignore  manage.py  pyproject.toml  pytest.ini
django_model_deepcopy/: asgi.py  deepcopy.py  model_helper.py  register.py  settings.py  urls.py  wsgi.py
django_model_deepcopy/settings/: test.py
django_model_deepcopy/tests/: models.py  test_deepcopy.py
django_model_deepcopy/tests/migrations/: 0001_initial.py
tests/: test_deepcopy.py
