[tool.poetry]
name = "django-model-deepcopy"
version = "0.1.0"
description = ""
authors = ["fabianallendorf <fabian.allendorf@node.energy>"]
readme = "README.md"
packages = [{include = "django_model_deepcopy"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
pillow = "^9.5.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^23.3.0"}
isort = "^5.10.1"
pytest = "^7.2.0"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
pyright = "^1.1.310"
faker = "^18.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["django_model_deepcopy", "tests"]
pythonVersion = "3.10.5"
venvPath = "/Users/fabianallendorf/Library/Caches/pypoetry/virtualenvs/"
venv = "django-model-deepcopy-hASS0c1I-py3.10"

